<resources>
    <string name="app_name">空氣品質偵測</string>
    <string name="ble_not_supported">BLE not supported on this device.</string>
    <string name="bt_not_supported">Bluetooth not supported on this device.</string>
    <string name="bt_not_enabled">Bluetooth is not enabled, turn it on.</string>
    <string name="error_ACCESS_COARSE_LOCATION">藍芽需要位置定位權限</string>
    <string name="action_scan">掃描</string>
    <string name="action_stop">停止</string>
    <string name="action_settings">切換工程</string>
    <string name="temperature_unit">溫度(°C)</string>
    <string name="humidity_unit">濕度(%)</string>
    <string name="normal">正常</string>
    <string name="warn">偏高</string>
    <string name="careful">過量</string>
    <string name="danger">危險</string>
    <string name="use_time">使用時間</string>
    <string name="start_time">開始時間</string>
    <string name="save_time">儲存時間</string>
    <string name="update_time">結束時間</string>
    <string name="file_name">儲存檔案</string>
    <string name="NA">N/A</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="range">Range</string>
</resources>
