<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:background="@color/normal">

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/deviceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:src="@drawable/normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/airStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="100dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="595dp"
            android:src="@drawable/temp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="595dp"
            android:text="@string/temperature_unit"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="370dp"
            android:layout_marginTop="595dp"
            android:src="@drawable/drop" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="410dp"
            android:layout_marginTop="595dp"
            android:text="@string/humidity_unit"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="650dp"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="405dp"
            android:layout_marginTop="650dp"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="40dp" />
    </RelativeLayout>
    <include layout="@layout/tab_layout" />
</RelativeLayout>
