<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.itripatch.itri_gas.WorkActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/appbar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NA"
                android:textSize="100dp" />

            <TextView
                android:id="@+id/sensitivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SENSITIVITY N/A"
                android:textSize="30dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:gravity="right"
                android:text="4000" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:gravity="right"
                android:text="3600" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="101dp"
                android:gravity="right"
                android:text="3200" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="133dp"
                android:gravity="right"
                android:text="2800" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="163dp"
                android:gravity="right"
                android:text="2400" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="195dp"
                android:gravity="right"
                android:text="2000" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="227dp"
                android:gravity="right"
                android:text="1600" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="260dp"
                android:gravity="right"
                android:text="1200" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="290dp"
                android:gravity="right"
                android:text="800" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="320dp"
                android:gravity="right"
                android:text="400" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="350dp"
                android:gravity="right"
                android:text="0" />

            <FrameLayout
                android:id="@+id/wave_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp">

            </FrameLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_time"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1h 23mins"
                android:textSize="60dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="開始時間 2017-07-25 16:00:25"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="結束時間 2017-07-25 17:23:25"
                android:textSize="30dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
